--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@adminjs/fastify": "^2.1.0",
+    "@adminjs/mongoose": "^4.1.0",
+    "@adminjs/themes": "^1.0.1",
+    "@fastify/cookie": "^7.4.0",
+    "@fastify/session": "^10.9.0",
+    "adminjs": "^7.8.17",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^4.29.1",
     "fastify-socket.io": "^5.1.0",
