--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@adminjs/fastify": "^2.1.0",
+    "@adminjs/fastify": "^4.2.0",
     "@adminjs/mongoose": "^4.1.0",
     "@adminjs/themes": "^1.0.1",
-    "@fastify/cookie": "^7.4.0",
-    "@fastify/session": "^10.9.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/session": "^11.1.1",
     "adminjs": "^7.8.17",
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^17.2.3",
-    "fastify": "^4.29.1",
-    "fastify-socket.io": "^5.1.0",
+    "fastify": "^5.6.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "socket.io": "^4.8.3"
   }
 }
